<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginActivity">


    <TextView
        android:id="@+id/tv_enter_acc"
        style="@style/textStyleSemIBold_32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/login_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_email"
        style="@style/textStyleMedium_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@+id/tv_enter_acc"
        app:layout_constraintTop_toBottomOf="@+id/tv_enter_acc" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_login_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:errorIconTint="@color/red"
        app:errorTextColor="@color/red"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edit_text"
            android:drawableStart="@drawable/icons_email"
            android:drawablePadding="12sp"
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColorHint="@color/dark_grey"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_pass"
        style="@style/textStyleMedium_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@+id/tv_enter_acc"
        app:layout_constraintTop_toBottomOf="@+id/layout_login_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_login_pass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconDrawable="@drawable/icons_see_pass"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/dark_grey"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:errorIconTint="@color/red"
        app:errorTextColor="@color/red"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_pass">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_login_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edit_text"
            android:drawableStart="@drawable/icons_pass"
            android:drawablePadding="12sp"
            android:ems="10"
            android:hint="@string/enter_pass"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColorHint="@color/dark_grey"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/textStyleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_button"
        android:elevation="0dp"
        android:padding="4dp"
        android:text="@string/login"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_login_pass" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login">


        <TextView
            android:id="@+id/tv_have_issues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/account_no"
            android:textColor="@color/dark_grey" />

        <TextView
            android:id="@+id/tv_register"
            style="@style/textStyleMedium_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:text="@string/register_here"
            android:textColor="@color/orange_100" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>