<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.welcome.WelcomeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="327dp"
        android:layout_height="320dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/custom_picture"
        android:scaleType="centerInside"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/titleTextView"
        style="@style/textStyleSemIBold_32"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/title_welcome_page"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal"
        android:alpha="0"
        tools:alpha="100"/>

    <TextView
        android:id="@+id/descTextView"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/message_welcome_page"
        android:textSize="14sp"
        android:textColor="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        android:alpha="0"
        android:fontFamily=""
        tools:alpha="100"/>

    <Button
        android:id="@+id/btn_login"
        style="@style/textStyleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_button_welcome_login"
        android:elevation="0dp"
        android:padding="10dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintBottom_toTopOf="@+id/btn_register" />

    <Button
        android:id="@+id/btn_register"
        style="@style/textStyleButton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_button_welcome_register"
        android:padding="10dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="197dp"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>